# wordcountrs

./: .gitignore  Cargo.toml  README.md  Rocket.toml  lulz.lua  perf_test.lua
src/: main.rs
