[package]
name = "wordcountrs"
version = "0.1.0"
authors = ["Jesse C. Grillo <jesse.grillo@gmail.com>"]

[dependencies]
actix = "0.7.*"
actix-web = "0.7.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
env_logger = "0.5.*"
futures = "0.1.*"
bytes = "0.4.*"
hashbrown = { version = "0.3.*", features = ["serde"] }
